--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chrissy_portfolio",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
@@ -9,8 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
