--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "sass": "^1.72.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webfontloader": "^1.6.28"
   },
   "scripts": {
     "start": "react-scripts start",
